--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: rails-5-starter-kit_development
+  database: starter_kit_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: rails-5-starter-kit
+  #username: starter_kit
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails-5-starter-kit_test
+  database: starter_kit_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: rails-5-starter-kit_production
-  username: rails-5-starter-kit
-  password: <%= ENV['RAILS-5-STARTER-KIT_DATABASE_PASSWORD'] %>
+  database: starter_kit_production
+  username: starter_kit
+  password: <%= ENV['STARTER_KIT_DATABASE_PASSWORD'] %>
